уточнил ендпоинты юзеров для админа
